# ocl2-wrapper

./: README.md
examples/raw_ocl/: CMakeLists.txt  cl_check_err.c  cl_check_err.h  cl_platform_ls.c  matrix_mult.c  matrix_mult_kernel.cl  vec_add.c  vec_add_kernel.cl
